feat: 显示微信公众号链接

--- a/languages/en.yml
+++ b/languages/en.yml
@@ -28,6 +28,7 @@ meta:
   created: 'Posted on'
   updated: 'Updated on'
   license: License
+  wechat: Follow on WeChat
   share: Share
   date_suffix:
     just: Just
